[package]
name = "auth-rust-warp"
version = "0.1.0"
authors = ["Mark Achee <mark@achee.com>"]
edition = "2018"

[dependencies]
deadpool-postgres = "0.5"
lazy_static = "1.4"
rand = "0.7"
regex = "1"
rust-argon2 = "0.8"
serde = "1"
serde_derive = "1"
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = "0.5"
warp = "0.2"
